tests/testdata/bench/check_local_by_default2.out
TS2322 [ERROR]: Type '12' is not assignable to type '"b"'.
const b: "b" = 12;
      ^
    at [WILDCARD]bench/check_local_by_default2.ts:3:7

error: Type checking failed.
